fixed note content breaking if the text has no whitespace. restyled the note.

--- a/insights/src/app/shared/components/note/note.component.scss
+++ b/insights/src/app/shared/components/note/note.component.scss
@@ -1,28 +1,33 @@
 $note-background: #fff3cd;
-$note-padding: .25rem;
+$note-padding: .5rem;
+$border-radius: 1rem;
 
 :host{
   display: flex;
 }
 
 .note{
-  width: 115px;
-  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  max-width: 115px;
+  // box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   background: $note-background;
   color: #313131;
   display: flex;
   flex-direction: column;
+  border-radius: $border-radius;
 }
 .note-created{
   text-align: right;
   font-size: .75rem;
   font-weight: bold;
-  background-color: darken($note-background, 10);
+  background-color: darken($note-background, 20);
   padding: $note-padding;
+  border-top-left-radius: $border-radius;
+  border-top-right-radius: $border-radius;
 }
 
 .note-body{
   padding: $note-padding;
+  overflow-wrap: break-word;
 }
 .no-touch{
   touch-action: manipulation;
